# argsParser

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/: argsParser.h
src/: argsParser.cpp
tests/: CMakeLists.txt  argumentOpt.cpp  argumentOptShort.cpp  incorrect.cpp  mixed.cpp  opt.cpp  optShort.cpp  tests.cpp
